// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`react tool adding reactions should add reaction to a comment 1`] = `
"# Reaction Added

**Target:** comment comment-id-1
**Emoji:** ❤️
**Operation:** add"
`;

exports[`react tool adding reactions should add reaction to a message 1`] = `
"# Reaction Added

**Target:** message msg-id-1
**Emoji:** 🎉
**Operation:** add"
`;

exports[`react tool adding reactions should add reaction to a thread 1`] = `
"# Reaction Added

**Target:** thread thread-id-1
**Emoji:** 👍
**Operation:** add"
`;

exports[`react tool removing reactions should remove reaction from a comment 1`] = `
"# Reaction Removed

**Target:** comment comment-id-1
**Emoji:** ❤️
**Operation:** remove"
`;

exports[`react tool removing reactions should remove reaction from a message 1`] = `
"# Reaction Removed

**Target:** message msg-id-1
**Emoji:** 🎉
**Operation:** remove"
`;

exports[`react tool removing reactions should remove reaction from a thread 1`] = `
"# Reaction Removed

**Target:** thread thread-id-1
**Emoji:** 👍
**Operation:** remove"
`;
